wip: setting up move logic

--- a/src/components/Space.scss
+++ b/src/components/Space.scss
@@ -1,6 +1,9 @@
 .space {
   height: 100%;
   width: calc(100% / 8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .light-space {
