refactor: SelectFromPieceOptions, PieceOption

--- a/src/components/invent/select/SelectStyles.scss
+++ b/src/components/invent/select/SelectStyles.scss
@@ -1,11 +1,11 @@
-.SelectBoard,
-.SelectPieces {
+.SelectFromBoardOptions,
+.SelectFromPieceOptions {
   border: 1px solid black;
   border-radius: 8px;
   padding: 16px;
 
   .BoardOption,
-  .SelectPieces {
+  .PieceOption {
     border: 1px solid blue;
     border-radius: 8px;
     padding: 8px;
